--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     },
     "autoload-dev": {
         "psr-0": {
-            "ZendTest\\": "tests/"
+            "ZendTest\\": "tests/",
+            "ZendPerformance\\": "tests/"
         }
     },
     "bin": [
